# Rocket

./: .gitignore  .gitmodules  Build.bat  CMakeLists.txt  README.md  RenderDoc.cap
Editor/Source/Core/: EditorApplication.cpp
Engine/Shaders/: Gradient.compute  Gradient_PushConstant.compute  Mesh.vertex  gradient.comp
Engine/Shaders/HLSL/: Pixel.hlsl  Vertex.hlsl
Engine/Source/: EngineMacros.h  EnginePCH.h
Engine/Source/Asset/: Asset.h  AssetManager.cpp  AssetManager.h
Engine/Source/Core/: Application.cpp  Application.h  Assert.h  Camera.cpp  Camera.h  Delegate.h  Engine.cpp  Engine.h  Entrypoint.cpp  Entrypoint.h  Input.h  KeyCode.h  Logger.cpp  Logger.h  Scene.h  Subsystem.h  Window.h
Engine/Source/Format/: GLTF.cpp  GLTF.h  HLSL.cpp  HLSL.h  MLF.cpp  MLF.h
Engine/Source/Impl/: TinyGLTF.cpp
Engine/Source/Math/: Math.h  Transform.h
Engine/Source/Memory/: Memory.h
Engine/Source/Platform/Generic/: GenericInput.cpp  GenericInput.h  GenericWindow.cpp  GenericWindow.h
Engine/Source/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.h
Engine/Source/Platform/Vulkan/: VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderHardwareInterface.cpp  VulkanRenderHardwareInterface.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTypes.h  VulkanUtility.cpp  VulkanUtility.h
Engine/Source/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Engine/Source/Renderer/: RHI.h  RenderHardwareInterface.h  Renderer.h  Settings.h  VulkanRHI.cpp  VulkanRHI.h
Engine/Source/Renderer/Common/: Buffer.h  Material.h  Mesh.h  Overlay.cpp  Overlay.h  Renderer.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h  Texture2D.h
Engine/Source/Renderer/Vulkan/: VulkanAllocator.cpp  VulkanAllocator.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommand.cpp  VulkanCommand.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrame.cpp  VulkanFrame.h  VulkanImGui.cpp  VulkanImGui.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanMaterial.cpp  VulkanMaterial.h  VulkanMemory.cpp  VulkanMemory.h  VulkanMesh.cpp  VulkanMesh.h  VulkanOverlay.cpp  VulkanOverlay.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderGraph.cpp  VulkanRenderGraph.h  VulkanSampler.cpp  VulkanSampler.h  VulkanSceneRenderer.cpp  VulkanSceneRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture2D.cpp  VulkanTexture2D.h
Engine/Source/Scene/: Component.h  Entity.h  Registry.cpp  Registry.h  Scene.h
Engine/Source/Tools/: HLSL.cpp  HLSL.h
Engine/Source/Utils/: FileSystem.h  Hash.h  Profiler.cpp  Profiler.h  Random.h  Singleton.h  Stopwatch.h  Timer.h  Timestep.h  UUID64.h
